# plugins_metrics-reporter-cloudwatch

./: BUCK  BUILD  MODULE.bazel  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  groups  metrics-reporter-cloudwatch_plugin_deps.lock.json  metrics-reporter-cloudwatch_third_party_runtime_jars.allowlist.txt  project.config
src/main/java/com/googlesource/gerrit/plugins/metricsreportercloudwatch/: FilteredMetricRegistry.java  GerritCloudwatchModule.java  GerritCloudwatchReporter.java  GerritCloudwatchReporterConfig.java
src/main/java/com/googlesource/gerrit/plugins/metricsreporters/: GerritCloudWatchReporter.java
src/main/resources/Documentation/: about.md  build.md  config.md
src/test/java/com/googlesource/gerrit/plugins/metricsreportercloudwatch/: GerritCloudwatchReporterConfigTest.java  MetricsReporterCloudwatchIT.java
